Changes with system file, add footer and form layout for login and register

--- a/includes/header/logged.html
+++ b/includes/header/logged.html
@@ -7,9 +7,9 @@
 
                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                     <li><a href="./index.php" class="nav-link px-3 link-dark">HOME</a></li>
-                    <li><a href="./public/items/items.php" class="nav-link px-3 link-dark">ITEMS</a></li>
-                    <li><a href="./public/lists/create_list.php" class="nav-link px-3 link-dark">NEW SET</a></li>
-                    <li><a href="./public/about.php" class="nav-link px-3 link-dark">ABOUT</a></li>
+                    <li><a href="./items.php" class="nav-link px-3 link-dark">ITEMS</a></li>
+                    <li><a href="./create_list.php" class="nav-link px-3 link-dark">NEW SET</a></li>
+                    <li><a href="./about.php" class="nav-link px-3 link-dark">ABOUT</a></li>
                </ul>
 
                <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
@@ -26,7 +26,7 @@
                          <li>
                               <hr class="dropdown-divider">
                          </li>
-                         <li><a class="dropdown-item" href="#">Sign out</a></li>
+                         <li><a class="dropdown-item" href="./logout.php">Sign out</a></li>
                     </ul>
                </div>
           </div>
