--- a/includes/header/unlogged.html
+++ b/includes/header/unlogged.html
@@ -7,8 +7,8 @@
 
                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                     <li><a href="./index.php" class="nav-link px-3 link-dark">HOME</a></li>
-                    <li><a href="./items/items.php" class="nav-link px-3 link-dark">ITEMS</a></li>
-                    <li><a href="./lists/create_list.php" class="nav-link px-3 link-dark">NEW SET</a></li>
+                    <li><a href="./items.php" class="nav-link px-3 link-dark">ITEMS</a></li>
+                    <li><a href="./create_list.php" class="nav-link px-3 link-dark">NEW SET</a></li>
                     <li><a href="./about.php" class="nav-link px-3 link-dark">ABOUT</a></li>
                </ul>
 
@@ -17,8 +17,8 @@
                </form>
 
                <div class="text-end">
-                    <a href="./login/login.php" class="btn btn-outline-primary me-2" href="">Login</a>
-                    <a href="./register/register.php" class="btn btn-primary">Sign-up</a>
+                    <a href="./login.php" class="btn btn-outline-primary me-2" href="">Login</a>
+                    <a href="./register.php" class="btn btn-primary">Sign-up</a>
                </div>
           </div>
      </div>
