--- a/includes/header/logged.html
+++ b/includes/header/logged.html
@@ -1,7 +1,7 @@
 <header class="p-3 mb-3 border-bottom">
      <div class="container">
           <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-               <a href="#" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none me-3">
+               <a href="./index.php" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none me-3">
                     <img src="./../img/logo.png" alt="Logo" height="40px">
                </a>
 
