Add working login system

--- a/includes/header/logged.html
+++ b/includes/header/logged.html
@@ -21,8 +21,8 @@
                          <img src="./../img/user_icon.jpg" alt="mdo" width="32" height="32" class="rounded-circle">
                     </a>
                     <ul class="dropdown-menu text-small">
-                         <li><a class="dropdown-item" href="#">My sets</a></li>
-                         <li><a class="dropdown-item" href="#">Profile</a></li>
+                         <li><a class="dropdown-item" href="./my_sets.php">My sets</a></li>
+                         <li><a class="dropdown-item" href="./my_profile.php">My profile</a></li>
                          <li>
                               <hr class="dropdown-divider">
                          </li>
