--- a/includes/header/unlogged.html
+++ b/includes/header/unlogged.html
@@ -9,6 +9,7 @@
                     <li><a href="./index.php" class="nav-link px-3 link-dark">HOME</a></li>
                     <li><a href="./items.php" class="nav-link px-3 link-dark">ITEMS</a></li>
                     <li><a href="./create_list.php" class="nav-link px-3 link-dark">NEW SET</a></li>
+                    <li><a href="./new_item.php" class="nav-link px-3 link-dark">NEW ITEM</a></li>
                     <li><a href="./about.php" class="nav-link px-3 link-dark">ABOUT</a></li>
                </ul>
 
