Creating new list works

--- a/includes/header/logged.html
+++ b/includes/header/logged.html
@@ -8,8 +8,6 @@
                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                     <li><a href="./index.php" class="nav-link px-3 link-dark">HOME</a></li>
                     <li><a href="./items.php" class="nav-link px-3 link-dark">ITEMS</a></li>
-                    <li><a href="./create_list.php" class="nav-link px-3 link-dark">NEW SET</a></li>
-                    <li><a href="./new_item.php" class="nav-link px-3 link-dark">NEW ITEM</a></li>
                     <li><a href="./about.php" class="nav-link px-3 link-dark">ABOUT</a></li>
                </ul>
 
@@ -23,7 +21,9 @@
                     </a>
                     <ul class="dropdown-menu text-small">
                          <li><a class="dropdown-item" href="./my_sets.php">My sets</a></li>
-                         <li><a class="dropdown-item" href="./my_profile.php">My profile</a></li>
+                         <li><a class="dropdown-item" href="./my_profile.php">My profile</a></li> 
+                         <li><a class="dropdown-item" href="./create_list.php">New list</a></li>
+                         <li><a class="dropdown-item" href="./new_item.php">New item</a></li>
                          <li>
                               <hr class="dropdown-divider">
                          </li>
