my_lists.php displays the user's list

--- a/includes/header/logged.html
+++ b/includes/header/logged.html
@@ -20,8 +20,8 @@
                          <img src="./../img/user_icon.jpg" alt="mdo" width="32" height="32" class="rounded-circle">
                     </a>
                     <ul class="dropdown-menu text-small">
-                         <li><a class="dropdown-item" href="./my_sets.php">My sets</a></li>
                          <li><a class="dropdown-item" href="./my_profile.php">My profile</a></li> 
+                         <li><a class="dropdown-item" href="./my_lists.php">My lists</a></li>
                          <li><a class="dropdown-item" href="./create_list.php">New list</a></li>
                          <li><a class="dropdown-item" href="./new_item.php">New item</a></li>
                          <li>
