my_lists.php displays user lists

--- a/includes/header/unlogged.html
+++ b/includes/header/unlogged.html
@@ -11,9 +11,9 @@
                     <li><a href="./about.php" class="nav-link px-3 link-dark">ABOUT</a></li>
                </ul>
 
-               <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+               <!--<form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
                     <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
-               </form>
+               </form>-->
 
                <div class="text-end">
                     <a href="./login.php" class="btn btn-outline-primary me-2" href="">Login</a>
