--- a/includes/header/logged.html
+++ b/includes/header/logged.html
@@ -11,9 +11,9 @@
                     <li><a href="./about.php" class="nav-link px-3 link-dark">ABOUT</a></li>
                </ul>
 
-               <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+               <!--<form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
                     <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
-               </form>
+               </form>-->
 
                <div class="dropdown text-end">
                     <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
@@ -22,6 +22,9 @@
                     <ul class="dropdown-menu text-small">
                          <li><a class="dropdown-item" href="./my_profile.php">My profile</a></li> 
                          <li><a class="dropdown-item" href="./my_lists.php">My lists</a></li>
+                         <li>
+                              <hr class="dropdown-divider">
+                         </li>
                          <li><a class="dropdown-item" href="./create_list.php">New list</a></li>
                          <li><a class="dropdown-item" href="./new_item.php">New item</a></li>
                          <li>
