--- a/templates/home.twig
+++ b/templates/home.twig
@@ -5,14 +5,14 @@
 {% block content %}
     <section>
         <h2 class="fs-1 ms-2">MOST POPULAR ITEMS</h2>
-        <div class="d-flex">
-            {% if posts %}
-		        {% for post in posts %}
-                    
+        <div class="d-flex"><div class="row">
+            {% if items is defined %}
+		            {% for item in items %}
+                    <div class="px-2 col-10 col-lg-4 mx-auto mx-lg-0 my-2"><div class="card"><div class="card-body row"><div class="col-9"><form method="get" action="item.php"><input type="hidden" name="item_id" value="{{ item.item_id }}"><input type="hidden" name="item_name" value="{{ item.item_name }}"><input type="hidden" name="category_name" value="{{ category_name }}"><input type="hidden" name="size" value="{{ item.size }}"><input type="hidden" name="view_count" value="{{ item.items_view_count }}"><h4 class="m-0" class="card-title"><input type="submit" class="m-0 p-0 border-0 bg-white" value="{{ item.item_name }}"></h4></form><p class="my-2" style="font-size: 15px;">CATEGORY: {{ item.category_name }}</p><p class="my-2" style="font-size: 15px;">SIZE: {{ item.size }}</p></div><div class="col-3 d-flex align-items-center justify-content-center"><div><div class="position-absolute p-3 border rounded" style="display: none; background: #fff; right: 78px; z-index: 111; width: max-content;"><form method="get" action="./php_inc/add_item_to_list.inc.php"><input type="text" name="item_id" value="{{ item.item_id }}" class="d-none"></form></div><div class="popover" data-on="0"><button type="button" class="btn btn-primary">+</button></div></div></div></div></div></div>
                 {% endfor %}
             {% else %}
-                <p>NO ITEMS FOUND</p>
+                <p>No items found</p>
             {% endif %}
-        </div>
+        </div></div>
     </section>
 {% endblock %}
