FEAT: Add twig render to list.php (might not work)

--- a/templates/list.twig
+++ b/templates/list.twig
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %}{{ list.name }} - Copeland - Drum sets configurator{% endblock %}
+{% block title %}{{ listName }} - Copeland - Drum sets configurator{% endblock %}
 
 {% block content %}
-    <section class="py-5"><div class="container px-4 px-lg-5 my-5"><div class="row gx-4 gx-lg-5 align-items-center"><div class="col-md-12"><h1 class="display-5 fw-bolder">{{ list.name }}</h1><h4 class="my-2">
-    {% if isListPrivate %}
+    <section class="py-5"><div class="container px-4 px-lg-5 my-5"><div class="row gx-4 gx-lg-5 align-items-center"><div class="col-md-12"><h1 class="display-5 fw-bolder">{{ listName }}</h1><h4 class="my-2">
+    {% if isListPrivate is defined %}
         <i class="bi bi-lock"></i> Private
     {% else %}
         <i class="bi bi-globe2"></i> Public
