--- a/templates/my_lists.twig
+++ b/templates/my_lists.twig
@@ -4,9 +4,9 @@
 
 {% block content %}
     <div class="row">
-        {% for item in items %}
+        {% for list in lists %}
             <div class="px-2 col-10 col-lg-4 mx-auto mx-lg-0 my-2"><div class="card"><div class="card-body"><h4 class="m-0" class="card-title">{{ list.name }}</h4><p class="my-2" style="font-size: 15px;">
-            {% if isListPrivate %}
+            {% if list.is_public == 0 %}
                 <i class="bi bi-lock"></i> Private
             {% else %}
                 <i class="bi bi-globe2"></i> Public
