FEAT: Add twig render to new_item.php

--- a/templates/new_item.twig
+++ b/templates/new_item.twig
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}My profile - Copeland - Drum sets configurator{% endblock %}
+{% block title %}New item - Copeland - Drum sets configurator{% endblock %}
 
 {% block content %}
 
