--- a/templates/signup.twig
+++ b/templates/signup.twig
@@ -5,7 +5,7 @@
 {% block content %}
     <h3 class="text-center">SIGN UP</h3>
 
-    {% block error %} {% endblock %}
+    <p><strong>{% block error %} {% endblock %}</strong></p>
 
     <form action="./php_inc/singup.inc.php" method="POST">
         <input type="text" name="name" id="name" required class="form-control my-2" placeholder="Username">
