--- a/templates/about.twig
+++ b/templates/about.twig
@@ -2,6 +2,10 @@
 
 {% block title %}About - Copeland - Drum sets configurator{% endblock %}
 
+{% block nav %}
+     {% include "header/choosed_header.twig" %}
+{% endblock %}
+
 {% block content %}
     <section>
         <h2 class="fs-1 ms-2">ABOUT</h2>
