--- a/templates/item.twig
+++ b/templates/item.twig
@@ -2,12 +2,19 @@
 
 {% block title %}{{ item.name }} - Copeland - Drum sets configurator{% endblock %}
 
+{% block nav %}
+     {% include "header/choosed_header.twig" %}
+{% endblock %}
+
 {% block content %}
     <section class="py-5"><div class="container px-4 px-lg-5 my-5"><div class="row gx-4 gx-lg-5 align-items-center"><div class="col-md-6"></div><div class="col-md-6"><h1 class="display-5 fw-bolder">{{ name }}</h1><h3>{{ category }}</h3><p>Size: {{ size }}</p><div class="d-flex"><div><div class="position-absolute p-3 border rounded" style="display: none; background: #fff; margin-top: 46px; z-index: 111;"><form method="get" action="./php_inc/add_item_to_list.inc.php">
-    {% if lists is defined %}
-        {{ lists }}
-    {% else %}
-        <strong>You are not logged in</strong>
-    {% endif %}
+	{% if lists is not null %}
+		{% for item in lists %}
+			<input type='checkbox' name='item_name_{{ item.list_name }}' value='{{ item.list_id }}'>  <label>{{ item.list_name }}</label><br>
+		{% endfor %}
+		<input type='submit' class='mt-2 btn btn-primary' value='Add to list'>
+	{% else %}
+		<strong>You are not logged in</strong>
+	{% endif %}
     </form></div><div class="popover" data-on="0"><button type="button" class="btn btn-primary">+ Add to list</button></div></div></div></div></div></div></section>
 {% endblock %}
