--- a/templates/items.twig
+++ b/templates/items.twig
@@ -2,12 +2,19 @@
 
 {% block title %}Items - Copeland - Drum sets configurator{% endblock %}
 
+{% block nav %}
+     {% include "header/choosed_header.twig" %}
+{% endblock %}
+
 {% block content %}
     <div class="row">
         {% for item in items %}
             <div class="px-2 col-10 col-lg-4 mx-auto mx-lg-0 my-2"><div class="card"><div class="card-body row"><div class="col-9"><form method="get" action="item.php"><input type="hidden" name="item_id" value="{{ item.id }}"><input type="hidden" name="item_name" value="{{ item.name }}"><input type="hidden" name="category_name" value="{{ item.category }}"><input type="hidden" name="size" value="{{ item.size }}"><input type="hidden" name="view_count" value="{{ item.viewCount}}"><h4 class="m-0" class="card-title"><input type="submit" class="m-0 p-0 border-0 bg-white" value="{{ item.name }}"></h4></form><p class="my-2" style="font-size: 15px;">CATEGORY: ' . convertToTitleCase($row['category_name']) . '</p><p class="my-2" style="font-size: 15px;">SIZE: {{item.name}}</p></div><div class="col-3 d-flex align-items-center justify-content-center"><div><div class="position-absolute p-3 border rounded" style="display: none; background: #fff; right: 78px; z-index: 111; width: max-content;"><form method="get" action="./php_inc/add_item_to_list.inc.php"><input type="text" name="item_id" value="{{ item.id }}" class="d-none">
-            {% if isLogged %}
-                {{ lists }}
+            {% if lists is not null %}
+                {% for item in lists %}
+                    <input type='checkbox' name='item_name_{{ item.list_name }}' value='{{ item.list_id }}'>  <label>{{ item.list_name }}</label><br>
+                {% endfor %}
+                <input type='submit' class='mt-2 btn btn-primary' value='Add to list'>
             {% else %}
                 <strong>You are not logged in</strong>
             {% endif %}
