--- a/templates/login.twig
+++ b/templates/login.twig
@@ -2,6 +2,10 @@
 
 {% block title %}Login - Copeland - Drum sets configurator{% endblock %}
 
+{% block nav %}
+     {% include "header/choosed_header.twig" %}
+{% endblock %}
+
 {% block content %}
     <div class="col-10 col-lg-3 mx-auto">
         <h3 class="text-center">LOGIN</h3>
