--- a/templates/my_profile.twig
+++ b/templates/my_profile.twig
@@ -2,6 +2,12 @@
 
 {% block title %}My profile - Copeland - Drum sets configurator{% endblock %}
 
+{% block nav %}
+     {% include "header/choosed_header.twig" %}
+{% endblock %}
+
 {% block content %}
-<div class="col-4"><table class="table table-striped"><tbody><tr><th scope="row">Username</th><td>{{ user.username }}</td></tr><tr><th scope="row">Email</th><td>{{ user.email }}</td></tr></tbody></table></div>
+     {% for user in users %}
+          <div class="col-4"><table class="table table-striped"><tbody><tr><th scope="row">Username</th><td>{{ user.username }}</td></tr><tr><th scope="row">Email</th><td>{{ user.email }}</td></tr></tbody></table></div>
+     {% endfor %}
 {% endblock %}
