--- a/templates/new_item.twig
+++ b/templates/new_item.twig
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %}New item - Copeland - Drum sets configurator{% endblock %}
+{% block title %}My profile - Copeland - Drum sets configurator{% endblock %}
+
+{% block nav %}
+     {% include "header/choosed_header.twig" %}
+{% endblock %}
 
 {% block content %}
 
