FEAT: Add header.inc.php

--- a/templates/create_list.twig
+++ b/templates/create_list.twig
@@ -3,22 +3,22 @@
 {% block title %}Create list - Copeland - Drum sets configurator{% endblock %}
 
 {% block nav %}
-     {% include "header/choosed_header.twig" %}
+	 {% include "header/choosed_header.twig" %}
 {% endblock %}
 
 {% block content %}
-    <div class="col-10 col-lg-3 mx-auto">
-        <h3 class="text-center">NEW LIST</h3>
+	<div class="col-10 col-lg-3 mx-auto">
+		<h3 class="text-center">NEW LIST</h3>
 
-        {% block error %}{% endblock %}
+		{% block error %}{% endblock %}
 
-        <form action="./php_inc/new_list.inc.php" method="POST">
-            <input type="text" name="list_name" id="list_name" required class="form-control my-2" placeholder="List name">
+		<form action="./include/new_list.inc.php" method="POST">
+			<input type="text" name="list_name" id="list_name" required class="form-control my-2" placeholder="List name">
 
-            <input type="checkbox" role="switch" id="list_public" name="list_public">
-            <label for="list_public">Public</label>
+			<input type="checkbox" role="switch" id="list_public" name="list_public">
+			<label for="list_public">Public</label>
 
-            <button class="w-100 btn btn-lg btn-primary my-2" type="submit" name="submit">Sign in</button>
-        </form>
-    </div>
+			<button class="w-100 btn btn-lg btn-primary my-2" type="submit" name="submit">Sign in</button>
+		</form>
+	</div>
 {% endblock %}
