--- a/templates/signup.twig
+++ b/templates/signup.twig
@@ -3,23 +3,25 @@
 {% block title %}Sign Up - Copeland - Drum sets configurator{% endblock %}
 
 {% block nav %}
-     {% include "header/choosed_header.twig" %}
+	 {% include "header/choosed_header.twig" %}
 {% endblock %}
 
 {% block content %}
-    <h3 class="text-center">SIGN UP</h3>
+	<h3 class="text-center">SIGN UP</h3>
 
-    {% block error %} {% endblock %}
+	{% block error %} {% endblock %}
 
-    <form action="./php_inc/singup.inc.php" method="POST">
-        <input type="text" name="name" id="name" required class="form-control my-2" placeholder="Username">
-                    
-        <input type="email" name="email" id="email" required class="form-control my-2" placeholder="Email">
+	<div class="col-10 col-lg-4 mx-auto">
+		<form action="./include/singup.inc.php" method="POST">
+			<input type="text" name="name" id="name" required class="form-control my-2" placeholder="Username">
+					
+			<input type="email" name="email" id="email" required class="form-control my-2" placeholder="Email">
 
-        <input type="password" name="pwd" id="pwd" required class="form-control my-2" placeholder="Password">
+			<input type="password" name="pwd" id="pwd" required class="form-control my-2" placeholder="Password">
 
-        <input type="password" name="r_pwd" id="r_pwd" required class="form-control my-2" placeholder="Repeat password">
+			<input type="password" name="r_pwd" id="r_pwd" required class="form-control my-2" placeholder="Repeat password">
 
-        <button class="w-100 btn btn-lg btn-primary my-2" type="submit" name="submit">Sign in</button>
-    </form>
+			<button class="w-100 btn btn-lg btn-primary my-2" type="submit" name="submit">Sign in</button>
+		</form>
+	</div>
 {% endblock %}
