--- a/templates/login.twig
+++ b/templates/login.twig
@@ -12,7 +12,7 @@
 
         {% block error %} {% endblock %}
 
-        <form action="./php_inc/login.inc.php" method="POST">
+        <form action="./include/login.inc.php" method="POST">
             <input type="text" id="name" name="name" required class="form-control my-2" placeholder="Username">
                   
             <input type="password" id="password" name="password" required class="form-control my-2" placeholder="Password">
