FIX: Fix problem with displaying error messages

--- a/templates/login.twig
+++ b/templates/login.twig
@@ -9,8 +9,8 @@
 {% block content %}
     <div class="col-10 col-lg-3 mx-auto">
         <h3 class="text-center">LOGIN</h3>
-
-        {% block error %} {% endblock %}
+ 
+	    <span><h4 class="fw-bold text-center my-3">{{ error }}</h4></span>
 
         <form action="./include/login.inc.php" method="POST">
             <input type="text" id="name" name="name" required class="form-control my-2" placeholder="Username">
