--- a/templates/create_list.twig
+++ b/templates/create_list.twig
@@ -9,8 +9,8 @@
 {% block content %}
 	<div class="col-10 col-lg-3 mx-auto">
 		<h3 class="text-center">NEW LIST</h3>
-
-		{% block error %}{% endblock %}
+	
+		<span><h4 class="fw-bold text-center my-3">{{ error }}</h4></span>
 
 		<form action="./include/new_list.inc.php" method="POST">
 			<input type="text" name="list_name" id="list_name" required class="form-control my-2" placeholder="List name">
