--- a/templates/signup.twig
+++ b/templates/signup.twig
@@ -9,7 +9,7 @@
 {% block content %}
 	<h3 class="text-center">SIGN UP</h3>
 
-	{% block error %} {% endblock %}
+	<span><h4 class="fw-bold text-center my-3">{{ error }}</h4></span>
 
 	<div class="col-10 col-lg-4 mx-auto">
 		<form action="./include/singup.inc.php" method="POST">
