FIX: Fix an issue with signing up

--- a/templates/signup.twig
+++ b/templates/signup.twig
@@ -12,7 +12,7 @@
 	<span><h4 class="fw-bold text-center my-3">{{ error }}</h4></span>
 
 	<div class="col-10 col-lg-4 mx-auto">
-		<form action="./include/singup.inc.php" method="POST">
+		<form action="./include/signup.inc.php" method="POST">
 			<input type="text" name="name" id="name" required class="form-control my-2" placeholder="Username">
 					
 			<input type="email" name="email" id="email" required class="form-control my-2" placeholder="Email">
