--- a/templates/login.twig
+++ b/templates/login.twig
@@ -17,7 +17,7 @@
                   
             <input type="password" id="password" name="password" required class="form-control my-2" placeholder="Password">
 
-            <button class="w-100 btn btn-lg btn-primary my-2" type="submit" name="submit">Sign in</button>
+            <input class="w-100 btn btn-lg btn-primary my-2" type="submit" name="submit" value="Sign In">
         </form>
     </div>
 {% endblock %}
