REFACTOR: Refactor the code structure
- Add /private/
- Categorize files from the /public/include/
- Move /public/include/ to /private/
- Move /templates/ to /private/
- Add __DIR__ to require_onces and headers

--- a/private/templates/login.twig
+++ b/private/templates/login.twig
@@ -12,7 +12,7 @@
  
 	    <span><h4 class="fw-bold text-center my-3">{{ error }}</h4></span>
 
-        <form action="./include/login.inc.php" method="POST">
+        <form action="./../private/user/login.inc.php" method="POST">
             <input type="text" id="name" name="name" required class="form-control my-2" placeholder="Username">
                   
             <input type="password" id="password" name="password" required class="form-control my-2" placeholder="Password">
