--- a/private/templates/create_list.twig
+++ b/private/templates/create_list.twig
@@ -12,7 +12,7 @@
 	
 		<span><h4 class="fw-bold text-center my-3">{{ error }}</h4></span>
 
-		<form action="./include/new_list.inc.php" method="POST">
+		<form action="./private/item_list/new_list.inc.php" method="POST">
 			<input type="text" name="list_name" id="list_name" required class="form-control my-2" placeholder="List name">
 
 			<input type="checkbox" role="switch" id="list_public" name="list_public">
