--- a/private/templates/header/logged.html
+++ b/private/templates/header/logged.html
@@ -1,6 +1,6 @@
 <div class="dropdown text-end">
 	<a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-		<img src="./../img/user_icon.jpg" alt="mdo" width="32" height="32" class="rounded-circle">
+		<img src="/../img/user_icon.jpg" alt="mdo" width="32" height="32" class="rounded-circle">
 	</a>
 	<ul class="dropdown-menu text-small">
 		<li><a class="dropdown-item" href="./my_profile.php">My profile</a></li> 
